Fix section height on small devices

--- a/static/css/resume.css
+++ b/static/css/resume.css
@@ -109,6 +109,7 @@ h2 {
 }
 
 section.resume-section {
+  min-height: 100vh;
   border-bottom: 1px solid #dee2e6;
   padding-top: 5rem !important;
   padding-bottom: 5rem !important;
@@ -119,9 +120,6 @@ section.resume-section .resume-item .resume-date {
 }
 
 @media (min-width: 768px) {
-  section.resume-section {
-    min-height: 100vh;
-  }
   section.resume-section .resume-item .resume-date {
     min-width: 18rem;
   }
